--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -55,7 +55,8 @@
             android:padding="8dp"
             android:text="@string/save_text"
             android:textAppearance="@style/myButtonStyleSmall"
-            app:srcCompat="@android:drawable/ic_menu_save" />
+            app:srcCompat="@android:drawable/ic_menu_save"
+            android:textColor="@color/text_color_primary"/>
     </LinearLayout>
 
 
