feat: messages view model

--- a/app/src/main/res/layout/add_text_departure_fragment.xml
+++ b/app/src/main/res/layout/add_text_departure_fragment.xml
@@ -63,6 +63,30 @@
                 android:minHeight="12dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="with text" />
+
+            <Spinner
+                android:id="@+id/message_departure_spinner"
+                android:layout_width="0dp"
+                style="@style/spinnerItemStyle2"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="end"
+                android:minHeight="12dp" />
+        </LinearLayout>
+
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
