--- a/app/src/main/res/layout/add_text_arrival_fragment.xml
+++ b/app/src/main/res/layout/add_text_arrival_fragment.xml
@@ -109,6 +109,7 @@
 
 
         <Button
+            android:id="@+id/arrival_save_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
