--- a/app/src/main/res/layout/add_text_departure_fragment.xml
+++ b/app/src/main/res/layout/add_text_departure_fragment.xml
@@ -88,6 +88,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/departure_rule_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|end"
