--- a/app/src/main/res/layout/contacts.xml
+++ b/app/src/main/res/layout/contacts.xml
@@ -13,6 +13,8 @@
         android:contentDescription="@string/add_new_contact"
         android:onClick="onAddContactButtonClicked"
         android:text="@string/add_new_contact"
+        android:textAppearance="@style/myButtonStyleSmall"
+        android:textColor="@color/text_color_primary"
         android:visibility="visible" />
 
     <android.support.v7.widget.RecyclerView
