--- a/app/src/main/res/layout/new_contact.xml
+++ b/app/src/main/res/layout/new_contact.xml
@@ -10,19 +10,23 @@
         android:id="@+id/name_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:ems="10"
+        android:hint="@string/name"
         android:inputType="textPersonName"
-        android:maxLength="50"
-        android:hint="@string/name" />
+        android:maxLength="50" />
 
     <EditText
         android:id="@+id/phone_editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:ems="10"
-        android:maxLength="40"
         android:hint="@string/phone_number_cc"
-        android:inputType="phone" />
+        android:inputType="phone"
+        android:maxLength="40" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,7 +44,8 @@
             android:focusable="true"
             android:onClick="onAddFromContactsClicked"
             android:text="@string/browse_my_contacts"
-            android:textAppearance="@style/myButtonStyleSmall" />
+            android:textAppearance="@style/myButtonStyleSmall"
+            android:textColor="@color/text_color_primary" />
 
         <Button
             android:id="@+id/save_contact_button"
@@ -54,6 +59,7 @@
             android:onClick="onSaveContactClick"
             android:text="@string/save_my_stalker"
             android:textAppearance="@style/myButtonStyleSmall"
+            android:textColor="@color/text_color_primary"
             app:srcCompat="@android:drawable/ic_menu_save" />
 </LinearLayout>
 </LinearLayout>
