--- a/app/src/main/res/layout/add_text_departure_fragment.xml
+++ b/app/src/main/res/layout/add_text_departure_fragment.xml
@@ -13,6 +13,19 @@
         android:layout_marginRight="8dp"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/add_text_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/add_text_rule_title"
+            android:textAppearance="@style/myDetailTitleStyle"
+           />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -101,6 +114,7 @@
             android:paddingRight="8dp"
             android:text="@string/save_departuring_sms_rule"
             android:textAppearance="@style/myButtonStyleSmall"
+            android:textColor="@color/text_color_primary"
             app:srcCompat="@android:drawable/ic_menu_save" />
     </LinearLayout>
 
