--- a/app/src/main/res/layout/new_notification_rule.xml
+++ b/app/src/main/res/layout/new_notification_rule.xml
@@ -45,7 +45,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
-                    android:text="Notifikuj mne po příchodu na místo" />
+                    android:text="@string/notify_me_after_arrival" />
 
                 <Spinner
                     android:id="@+id/arrival_notification_spinner"
@@ -58,7 +58,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="start"
-                    android:text="pokud jsem před tím byl na místě" />
+                    android:text="@string/if_I_departured_from" />
 
                 <Spinner
                     android:id="@+id/departure_anywhere_notification_spinner"
@@ -107,9 +107,8 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:gravity="start"
-                    android:text="Notifikuj mne po odchodu z místa" />
+                    android:text="@string/notify_me_after_departuring_from" />
 
                 <Spinner
                     android:id="@+id/departure_notification_spinner"
