--- a/app/src/main/res/layout/new_wifi_rule.xml
+++ b/app/src/main/res/layout/new_wifi_rule.xml
@@ -14,72 +14,160 @@
         android:orientation="vertical"
         android:textAlignment="center">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:orientation="vertical">
+        <TextView
+            android:id="@+id/add_text_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/add_sound_rule"
+            android:textAppearance="@style/myDetailTitleStyle" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="@string/turn_wi_fi" />
+
+                <Spinner
+                    android:id="@+id/on_wifi_spinner"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="end"
+                    android:minHeight="12dp" />
+
+            </LinearLayout>
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="start"
-                android:text="@string/turn_wi_fi" />
+                android:text="@string/after_my_arrival_to" />
 
             <Spinner
-                android:id="@+id/on_wifi_spinner"
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                android:id="@+id/arrival_wifi_spinner"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="end"
                 android:minHeight="12dp" />
 
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="start"
+                android:text="@string/if_I_departured_from" />
+
+            <Spinner
+                android:id="@+id/departure_anywhere_wifi_spinner"
+                style="@style/spinnerItemStyle2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:minHeight="12dp" />
+
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_margin="16dp"
+                android:background="@drawable/rounded_button"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="onSaveWifiArrivalRuleClick"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="@string/save_sound_rule"
+                android:textAppearance="@style/myButtonStyleSmall"
+                android:textColor="@color/text_color_primary"
+                app:srcCompat="@android:drawable/ic_menu_save" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/while_in" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="8dp"
+                android:orientation="horizontal">
 
-            <Spinner
-                android:id="@+id/place_wifi_spinner"
-                android:layout_width="0dp"
-                android:layout_weight="2"
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="start"
+                    android:text="@string/turn_wi_fi" />
+
+                <Spinner
+                    android:id="@+id/wifi_on_spinner_departure"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="end"
+                    android:minHeight="12dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"
-                android:minHeight="12dp" />
+                android:layout_margin="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start"
+                    android:text="@string/after_departuring_from" />
+
+                <Spinner
+                    android:id="@+id/departure_wifi_spinner"
+                    style="@style/spinnerItemStyle2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="end"
+                    android:minHeight="12dp" />
+            </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|end"
+                android:layout_margin="16dp"
+                android:background="@drawable/rounded_button"
+                android:clickable="true"
+                android:focusable="true"
+                android:onClick="onSaveWifiDepartureRuleClick"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="@string/save_wi_fi_rule"
+                android:textAppearance="@style/myButtonStyleSmall"
+                android:textColor="@color/text_color_primary"
+                app:srcCompat="@android:drawable/ic_menu_save" />
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|end"
-            android:layout_margin="16dp"
-            android:background="@drawable/rounded_button"
-            android:clickable="true"
-            android:focusable="true"
-            android:onClick="onSaveWifiRuleClick"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:text="@string/save_wi_fi_rule"
-            android:textAppearance="@style/myButtonStyleSmall"
-            android:textColor="@color/text_color_primary"
-            app:srcCompat="@android:drawable/ic_menu_save" />
-    </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
